# tribe

./: .gitignore  CMakeLists.txt  Makefile.am  README.md  configure.ac
Installer/InnoSetup/: TribeX86.iss
c/apps/umgr/: build.ninja
installer/innosetup/: tribe.iss
src/: CMakeLists.txt  Makefile.am  Tribe.dsp  Tribe.sln  Tribe.vcproj  ab.c  ab.h  ab_contact.c  ab_contact.h  about_dialog.c  arraysize.h  contact_editor.c  contact_editor.h  db.c  db.h  dirs.c  dirs.h  main.c  mkdirp.c  resource.h  tribe-application.c  tribe-application.h  tribe-contact-dialog.c  tribe-contact-dialog.h  tribe-window.c  tribe-window.h  tribe.exe.manifest  tribe.rc  tribe.rcv  tribe.sln  tribe.vcproj  ui.rc  user.c  util.c  window.c  window.h
src/cli/: CMakeLists.txt  Makefile.am  cmd_add.c  cmd_delete.c  cmd_list.c  cmd_modify.c  common.c  common.h  main.c
